fixed stretched images

--- a/src/styles/imageCarousel.less
+++ b/src/styles/imageCarousel.less
@@ -4,9 +4,6 @@
 
     }
     img {
-        @media screen and (min-width:960px){
-            height: 90vh;
-            width: 80vw;
-        }
+         height: auto;
     }
 }
